dbadmin-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    wow: dbadmin
  name: dbadmin
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        wow: dbadmin
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: 123sqwert!
        image: phpmyadmin/phpmyadmin
        name: cmangos-classic-phpadmin
        ports:
        - containerPort: 80
      restartPolicy: Always
