register-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    wow: register
  name: register
  namespace: wow
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      wow: register
  template:
    metadata:
      labels:
        wow: register
    spec:
      containers:
#      - image: lacsap/cmangos-web-register
      - image: chz8494/cmangos-register:latest
        name: cmangos-register
        ports:
        - containerPort: 80
 #       volumeMounts:
 #       - mountPath: /var/www/html
 #         name: register-claim0
 #         subPath: html
      restartPolicy: Always
 #     volumes:
 #     - name: register-claim0
 #       persistentVolumeClaim:
 #         claimName: register-claim0
