server-deployment-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    wow: server
  name: server
  namespace: wow
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      wow: server
  template:
    metadata:
      labels:
        wow: server
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: 123sqwert!
        - name: WOW_SERVER_NAME
          value: wow.k8s.tdlab.ca
        - name: MYSQL_HOST
          value: db
#        image: lacsap/cmangos-classic
        image: chz8494/cmangos-classic:latest
#        image: docker-pull.tdlab.ca/cmangos-classic:latest
        name: cmangos-classic-server
        ports:
        - containerPort: 8085
        - containerPort: 3724
        volumeMounts:
        - mountPath: /home/mangos/run/etc/
          name: server-claim0
      restartPolicy: Always
      volumes:
      - name: server-claim0
        persistentVolumeClaim:
          claimName: wow-server-claim0
