db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    wow: db
  name: db
  namespace: wow
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    wow: mariadb
