mariadb-bitnami-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    wow: mariadb
  name: mariadb
  namespace: wow
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      wow: mariadb
  template:
    metadata:
      labels:
        wow: mariadb
    spec:
      containers:
      - env:
        - name: MARIADB_ROOT_PASSWORD
          value: 123sqwert!
        image: bitnami/mariadb
        name: cmangos-classic-db
        ports:
        - containerPort: 3306
          name: mysql
          protocol: TCP
        livenessProbe:
          exec:
            command:
            - mysqladmin
            - ping
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - mysqladmin
            - ping
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
        volumeMounts:
        - mountPath: /bitnami/mariadb
          name: db-claim0
        - mountPath: /opt/bitnami/mariadb/conf
          name: config
      restartPolicy: Always
      volumes:
      - name: db-claim0
        persistentVolumeClaim:
          claimName: wow-db-claim0
      - configMap:
          defaultMode: 420
          name: config-mariadb
        name: config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    wow: db
  name: db
  namespace: wow
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    wow: mariadb
