register-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    wow: register
  name: register
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 80
  selector:
    wow: register
  type: LoadBalancer
