server-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    wow: server
  name: wow-server
  namespace: wow
spec:
  ports:
  - name: "8085"
    port: 8085
    targetPort: 8085
  - name: "3724"
    port: 3724
    targetPort: 3724
  selector:
    wow: server
  type: ClusterIP
