ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app: wow
  name: wow-ingress
  namespace: wow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: wow-web-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
  - hosts:
    - wow-register.k8s.tdlab.ca
    secretName: wow-register
  rules:
  - host: yeah.k8s.tdlab.ca
    http:
      paths:
      - backend:
          serviceName: wow-register
          servicePort: 80
        path: /
